# speedtest-cli

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.rst  pyproject.toml  requirements-dev.txt  speedtest.py  tox.ini
.github/workflows/: ci.yml
tests/: __init__.py  test_speedtest.py
